@@ -5,10 +5,13 @@ import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Properties;
 
 import javax.annotation.Nullable;
 
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.exception.ContextedRuntimeException;
 import org.eclipse.jetty.http.HttpVersion;
 import org.eclipse.jetty.server.HttpConnectionFactory;
 import org.eclipse.jetty.server.Server;
@@ -28,13 +31,13 @@ public class UserGlobalConfig {
     /**
      * The users global configuration directory at ~/.cgptdevbenchglobal .
      */
-    Path configDir = Path.of(System.getProperty("user.home"), ".cgptdevbenchglobal");
-    Path httpsConfigFile = configDir.resolve("https.properties");
+    Path configDir = Paths.get(System.getProperty("user.home"), ".cgptdevbenchglobal");
+    Path configFile = configDir.resolve("https.properties");
 
     /**
      * The port to use for https.
      */
-    int httpsPort;
+    Integer httpsPort;
     /**
      * The path to the keystore file.
      */
@@ -69,46 +72,23 @@ public class UserGlobalConfig {
      * Reads the httpsConfigFile if it exists. Return true if configuration could be read completely.
      */
     public boolean readAndCheckConfiguration(@Nullable String globalConfigDir) throws IOException {
-        configDir = globalConfigDir != null ? Path.of(globalConfigDir) :
-                Path.of(System.getProperty("user.home"), ".cgptdevbenchglobal");
-        httpsConfigFile = configDir.resolve("https.properties");
-        if (!httpsConfigFile.toFile().exists()) {
-            TbUtils.logError("Could not find https configuration file " + httpsConfigFile + " - https disabled.");
+        configDir = globalConfigDir != null ? Paths.get(globalConfigDir) :
+                Paths.get(System.getProperty("user.home"), ".cgptdevbenchglobal");
+        configFile = configDir.resolve("config.properties");
+        if (!configFile.toFile().exists()) {
+            TbUtils.logError("Could not find global configuration file " + configFile + " - https disabled.");
             return false;
         }
         config = new Properties();
-        try (InputStream is = Files.newInputStream(httpsConfigFile)) {
+        try (InputStream is = Files.newInputStream(configFile)) {
             config.load(is);
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            throw new ContextedRuntimeException(e);
         }
-        httpsPort = Integer.parseInt(config.getProperty("httpsport"));
-        keystorePath = config.getProperty("keystorepath");
-        String keystorePasswordPath = config.getProperty("keystorepasswordpath");
-        domain = config.getProperty("domain");
-        externport = Integer.parseInt(config.getProperty("externport", "443"));
 
-        if (httpsPort <= 0) {
-            TbUtils.logError("httpsport property in " + httpsConfigFile + " is not a positive integer - https disabled.");
-            return false;
-        }
-        if (null == keystorePath) {
-            TbUtils.logError("keystorepath property in " + httpsConfigFile + " is missing - https disabled.");
-            return false;
-        }
-        if (null == keystorePasswordPath) {
-            TbUtils.logError("keystorepasswordpath property in " + httpsConfigFile + " is missing - https disabled.");
-            return false;
-        }
-        keystorePassword = Files.readString(configDir.resolve(keystorePasswordPath), StandardCharsets.UTF_8);
-        if (null == keystorePassword || keystorePassword.isEmpty()) {
-            TbUtils.logError("Could not read keystore password from " + keystorePasswordPath + " - https disabled.");
-            return false;
-        }
-        keystorePassword = keystorePassword.trim();
         gptSecret = config.getProperty("gptsecret");
         if (null == gptSecret || gptSecret.trim().length() < 8) {
-            TbUtils.logError("gptsecret property in " + httpsConfigFile + " is missing or less than 8 chars - https disabled.");
+            TbUtils.logError("gptsecret property in " + configFile + " is missing or less than 8 chars - https disabled.");
             return false;
         }
         gptSecret = gptSecret.trim();
@@ -116,10 +96,38 @@ public class UserGlobalConfig {
         openaitoken = config.getProperty("openaitoken");
         openaitoken = openaitoken != null ? openaitoken.trim() : null;
 
-        if (null == domain) {
-            TbUtils.logError("domain property in " + httpsConfigFile + " is missing - https disabled.");
-            return false;
+        httpsPort = config.getProperty("httpsport") != null ? Integer.parseInt(config.getProperty("httpsport")) : null;
+        keystorePath = config.getProperty("keystorepath");
+        String keystorePasswordPath = config.getProperty("keystorepasswordpath");
+        domain = config.getProperty("domain");
+        externport = Integer.parseInt(config.getProperty("externport", "443"));
+
+        if (httpsPort == null || httpsPort <= 0) {
+            TbUtils.logError("httpsport property in " + configFile + " is not set - our own https is disabled, relying on a tunnel.");
+            // that is OK if we use a tunnel instead of doing https ourselves
+            return true;
+        } else {
+            if (null == keystorePath) {
+                TbUtils.logError("keystorepath property in " + configFile + " is missing - https disabled.");
+                return false;
+            }
+            if (null == keystorePasswordPath) {
+                TbUtils.logError("keystorepasswordpath property in " + configFile + " is missing - https disabled.");
+                return false;
+            }
+            keystorePassword = new String(Files.readAllBytes(configDir.resolve(keystorePasswordPath)), StandardCharsets.UTF_8);
+            if (null == keystorePassword || keystorePassword.isEmpty()) {
+                TbUtils.logError("Could not read keystore password from " + keystorePasswordPath + " - https disabled.");
+                return false;
+            }
+            keystorePassword = keystorePassword.trim();
+
+            if (null == domain) {
+                TbUtils.logError("domain property in " + configFile + " is missing - https disabled.");
+                return false;
+            }
         }
+
         return true;
     }
 
@@ -127,39 +135,56 @@ public class UserGlobalConfig {
         return (rawRequest, rawResponse, chain) -> {
             HttpServletRequest request = (HttpServletRequest) rawRequest;
             HttpServletResponse response = (HttpServletResponse) rawResponse;
-            String secret = request.getHeader("Authorization");
-            boolean isPublicRequest = DevToolBench.UNPROTECTED_PATHS.contains(request.getRequestURI());
-            if (gptSecret != null && !isPublicRequest && (secret == null || !secret.contains(gptSecret))) {
-                TbUtils.logError("service access token missing. Request was " + request.getRequestURI() + " from " + request.getRemoteAddr() + " - wrong Authorization header " + secret);
-                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-                response.getWriter().println("service access token missing in Authorization header");
+
+            boolean requestislocal = request.getHeader("X-Forwarded-Proto") == null && !request.isSecure()
+                    || request.getRequestURL().toString().startsWith("http://localhost");
+            if (!requestislocal && StringUtils.isBlank(gptSecret)) {
+                TbUtils.logError("No gptsecret configured in " + configFile + " and request is remote - refusing to serve for security reasons.");
+                response.setStatus(HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+                response.getWriter().println("No gptsecret configured in " + configFile + " and request is remote - refusing to serve for security reasons.");
                 return;
             }
+
+            String secret = request.getHeader("Authorization");
+            boolean isPublicRequest = DevToolBench.UNPROTECTED_PATHS.contains(request.getRequestURI());
+            if (!requestislocal && !isPublicRequest && (secret == null || !secret.contains(gptSecret))) {
+                TbUtils.logError("service access token missing. Request was " + request.getRequestURI() + " from " + request.getRemoteAddr() + " - wrong Authorization header " + secret);
+                response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                response.getWriter().println("service access token missing in Authorization header for " + request.getRequestURI());
+                return;
+            }
+
             chain.doFilter(rawRequest, rawResponse);
         };
     }
 
     public void addHttpsConnector(Server server) throws IOException {
-        SslContextFactory.Server sslContextFactory = new SslContextFactory.Server();
-        sslContextFactory.setKeyStorePath(configDir.resolve(keystorePath).toString());
-        sslContextFactory.setKeyStorePassword(keystorePassword);
+        if (httpsPort != null) {
+            SslContextFactory.Server sslContextFactory = new SslContextFactory.Server();
+            sslContextFactory.setKeyStorePath(configDir.resolve(keystorePath).toString());
+            sslContextFactory.setKeyStorePassword(keystorePassword);
 
-        ServerConnector httpsConnector = new ServerConnector(server,
-                new SslConnectionFactory(sslContextFactory, HttpVersion.HTTP_1_1.asString()),
-                new HttpConnectionFactory());
-        httpsConnector.setPort(httpsPort);
+            ServerConnector httpsConnector = new ServerConnector(server,
+                    new SslConnectionFactory(sslContextFactory, HttpVersion.HTTP_1_1.asString()),
+                    new HttpConnectionFactory());
+            httpsConnector.setHost("0.0.0.0");
+            httpsConnector.setPort(httpsPort);
 
-        server.addConnector(httpsConnector);
-        TbUtils.logInfo("Starting with https locally on https://localhost:" + httpsPort + "/");
-        TbUtils.logInfo("Started with https for " + getExternUrl());
+            server.addConnector(httpsConnector);
+            TbUtils.logInfo("Starting with https locally at https://localhost:" + httpsPort + "/ for " + getExternUrl());
+            TbUtils.logInfo("(We assume there is a tunnel from " + domain + ":" + externport + " to localhost:" + httpsPort + ".)");
+        }
     }
 
     public String getExternUrl() {
-        if (externport != 443) {
-            return "https://" + domain + ":" + externport;
-        } else {
-            return "https://" + domain;
+        if (httpsPort != null) {
+            if (externport != 443) {
+                return "https://" + domain + ":" + externport;
+            } else {
+                return "https://" + domain;
+            }
         }
+        return null;
     }
 
     public String getOpenaiToken() {
